--- a/assts/asst11.adoc
+++ b/assts/asst11.adoc
@@ -43,6 +43,8 @@ in a list of source files. We use the `find` command to generate the list of sou
 
 image::grep.png[width=500px]
 
+NOTE: Make sure you include the backticks, e.g. `` ` ``. This adds the filenames found by `find` as command line arguments to `grep`.
+
 In the file, `grep.c`, implement a program that uses N threads to search for a keyword 
 in a set of files. 
 
@@ -51,10 +53,10 @@ in a set of files.
 $ **make grep**
 gcc -g -Wall -Wvla -Werror grep.c -o grep -lpthreads
 $ **./grep**
-usage: ./grep NumThreads Keyword Files
+usage: ./grep ``<``NumThreads``>`` ``<``Keyword``>`` ``<``Files``>``
 ----
 
-// Need to include an image because backtick does not work
+// Backticks can be written with `` ` ``
 image::thread-grep.png[width=500px]
 
 Requirements:
