--- a/studyguide6.adoc
+++ b/studyguide6.adoc
@@ -7,7 +7,7 @@ include::header.adoc[]
 
 = {title}
 
-Code Jams are open book. 40 minutes in lab.
+Exams are closed book. One written cheat sheet.
 
 Topics:
 
@@ -22,6 +22,14 @@ Everything from link:studyguide5.html[Study Guide 5], plus
 = Practice questions
 
 == Threads
+
+1) Short Answers
+
+* What is a mutex? When do we need to use mutex?
+* What is a barrier? When do we need to use barrier?
+* What is a race condition?
+* What is deadlock?
+* What does it mean for a function to be thread safe?
 
 2) The following multi-threaded program simulates two bank accounts. But it's not working correctly. What is going on and how can we fix it?
 
@@ -93,8 +101,12 @@ int main() {
 }
 ----
 
-3) The following multi-threaded program attempts to count the numbers in a list that are greater than 1000 but isn't working correctly. What is going on and how can we fix it?
+3) The following multi-threaded program attempts to count the numbers in a list.
 
+* Which data is shared between threads?
+* Which data is only accessed by a single thread?
+* Which data is shared only between main and a single thread?
+* When the list size is greater than 1000 the program isn't working correctly. What is going on and how can we fix it?
 
 [source]
 ----
@@ -149,6 +161,28 @@ int main(int argc, char *argv[]) {
   return 0;
 }
 ----
+
+4) Suppose a serial program takes 10 seconds to run but only 2 seconds with 4 cores. What is the speed up?
+
+{nbsp}
+
+5) Suppose a serial program takes 10 seconds to run but only 2 seconds with 4 cores. What is the efficiency?
+
+{nbsp}
+
+6) Ahmdel's Law. Suppose a program is 90% parallelizable and the serial version of the program (e.g. the one with one thread) takes 10 seconds to run.
+
+* What is the speedup if we have 2 cores?
+
+{nbsp}
+
+* What is the speedup if we have 5 cores?
+
+{nbsp}
+
+* What is the theoretical best case speedup if we have infinitely many cores? 
+
+{nbsp}
 
 == Advanced pointers
 
@@ -351,18 +385,21 @@ for (int i = 0; i < N; i++) {
 
 Short answers
 
-* Give examples of the types of code that the compiler can optimize
-* Give an example of code that cannot be optimized by the compiler?
+* In what ways can a program be optimized?
+* What is constant folding?
+* What is function inlining?
+* What is constant propagation?
+* What is dead code elimination?
+* What is loop unrolling?
+* What is memory aliasing?
 
-1) Ann-marie has the following errors when she tried to build. What type of error is it (compile, link, runtime, or logical)? How can she fix it?
+1) How the following code would change after constant folding?
 
 [source]
 ----
-/usr/bin/ld: /tmp/ccH1QHw0.o: in function `main':
-thread-argv.c:(.text+0x1c4): undefined reference to `pthread_attr_setstacksize'
-/usr/bin/ld: thread-argv.c:(.text+0x2e4): undefined reference to `pthread_create'
-/usr/bin/ld: thread-argv.c:(.text+0x38d): undefined reference to `pthread_join'
-collect2: error: ld returned 1 exit status
+#define N 5
+int test1 = N - 4;
+int test2 = N + 4;
 ----
 
 2) Can the compiler optimize the following code? If no, how can we make the following code more efficient? 
@@ -374,6 +411,63 @@ scanf(" %s", text);
 int sum = 0;
 for (int i = 0; i < strlen(text); i++) {
   sum += text[i];
+}
+----
+
+3) How would the following code change after constant propagation and dead code removed?
+
+[source]
+----
+int debug = 0;
+
+//sums up all the elements in an array
+int doubleSum(int *array, int length){
+    int i, total = 0;
+    for (i = 0; i < length; i++){
+        total += array[i];
+        if (debug) {
+            printf("array[%d] is: %d\n", i, array[i]);
+        }
+    }
+    return 2 * total;
+}
+----
+
+4) How would the following code change after unrolling the loop?
+
+[source]
+----
+void loopDeLoo(float* pos, float scale){
+    int i;
+    for (i = 0; i < 3; i++){
+      pos[i] = scale * pos[i];
+    }
+}
+----
+
+5) Why can't the following code be optimized by the compiler?
+
+[source]
+----
+void shiftAdd(int *a, int *b){
+  *a = *a * 10; //multiply by 10
+  *a += *b; //add b
+}
+----
+
+6) What can't the following code be optimized by the compiler?
+
+[source]
+----
+int main() {
+  char test[32];
+  strcpy(test, "hello");
+  for (int i = 0; i < strlen(test); i++) {
+    printf("%c\n", test[i]);
+    if (i == 0) {
+      strcpy(test, "hello!");
+    }
+  }
 }
 ----
 
@@ -416,4 +510,15 @@ void delete_pallette(struct ppm_pixel* pallette);
 * How might Tymothy implement the given functions?
 * Are the commands for building a library different
 * How can Tymothy use the functions in their library? Write a program that tests the pallet function.
+
+1) Ann-marie has the following errors when she tried to build. What type of error is it (compile, link, runtime, or logical)? How can she fix it?
+
+[source]
+----
+/usr/bin/ld: /tmp/ccH1QHw0.o: in function `main':
+thread-argv.c:(.text+0x1c4): undefined reference to `pthread_attr_setstacksize'
+/usr/bin/ld: thread-argv.c:(.text+0x2e4): undefined reference to `pthread_create'
+/usr/bin/ld: thread-argv.c:(.text+0x38d): undefined reference to `pthread_join'
+collect2: error: ld returned 1 exit status
+----
 ////
