--- a/accomodations.adoc
+++ b/accomodations.adoc
@@ -1,11 +1,7 @@
 == Academic Accommodations
 
-All classes will be recorded and close-captioned. Links to lectures will be
-posted on the class syllabus. 
-
-Any student who has a disability-related need to record this class first must
-speak with the Director of Access Services, Deb Alder, as part of university
-policy. Class members need to be aware that this class may be recorded.
+Classes will be recorded and close-captioned. Links to lectures will be
+posted on the class slack. 
 
 To receive an accommodation for a course activity (such as more time on quizzes
 and exams), you must have an Accommodation Letter from the Office of Student
@@ -15,16 +11,9 @@ emailed to me, the instructor.
 
 You are also welcome to contact us privately to discuss your academic needs.
 However, all disability-related accommodations must be arranged, in advance,
-through Student Disability Services.
-
-Students needing academic accommodations for a disability must first register
-with Access Services. Students can call 610-526-7516 to make an appointment
-with the Director of Access Services, Deb Alder, or email her at
-dalder@brynmawr.edu to begin this confidential process.  Once registered,
-students should schedule an appointment with the professor as early in the
-semester as possible to share the verification form and make appropriate
-arrangements. Please note that accommodations are not retroactive and require
-advance notice to implement. More information can be obtained at the Access
-Services website. (http://www.brynmawr.edu/access-services/)
+through Student Disability Services.  Also note that accommodations are not
+retroactive and require advance notice to implement. More information can be
+obtained at the Access Services website.
+(http://www.brynmawr.edu/access-services/)
 
 
