--- a/index.adoc
+++ b/index.adoc
@@ -15,11 +15,8 @@ Instructor: link:https://www.cs.brynmawr.edu/~alinen[Aline Normoyle]
 
 [.anns]
 
-* Lab Dec 12th: link:studyguide6.html[Study Guide 6]
-* Our final exam will be **self-scheduled** during the period Dec 15-20, 2024.
-* Final Exam Review Session: Dec 16th, 11:40am-1:00pm, Park 230.
-** link:studyguide-final.html[Final Study Guide]
-* Additional office hours: Dec 17th, 11:40am-1:00pm, Park 200A.
+* Welcome!
+* Assignment 
 
 == Course Info
 
@@ -47,11 +44,10 @@ will be introduced at the end of the course.
 |===
 | Activity | Location | Time
 
-| Lecture | Park 159 | Tuesday and Thursday 11:40 AM - 1:00 PM 
-| Lab | Park 230 | Thursday 2:40 PM - 4:00 PM 
-| Office Hours - Prof. Aline Normoyle | Park 200B | Fridays, 2-3 PM (But often will be available until 5 PM) 
-| Office Hours - Paprika Chen | Park 231 | Tuesdays, 7-8 PM  
-| Office Hours - Yue Chen | Park 231 | Thursdays, 7-8 PM
+| Lecture | Park 337 | Tuesday and Thursday 10:10 AM - 11:30 AM 
+| Lab | Park 231 | Tuesdays 2:40 PM - 4:00 PM 
+| Office Hours - Prof. Aline Normoyle | Park 200B | Tuesdays, 4-5 PM 
+| Office Hours - Tianyun Song | Park 231 | TBD
 
 |===
 
