--- a/integrity.adoc
+++ b/integrity.adoc
@@ -1,22 +1,44 @@
 == Academic Integrity
 
-Copied and unattributed work will receive zero credit. At Bryn Mawr, we assume students are
-trustworthy and work with honesty and integrity.
+At Bryn Mawr, we assume students are trustworthy and work with honesty and
+integrity.
 link:https://www.brynmawr.edu/deans/academic-and-community-integrity[Look here
-for information about Bryn Mawr's Honor Code.] 
+for information about Bryn Mawr's Honor Code.]. Obviously, quizzes and exams must 
+be your own work. However, you will be allowed to work with others on assignments; 
+although *everyone must still submit their own work.* 
 
-As you progress in this course, you will see that programming is a creative
-process, similar to writing. The same problem can be solved in
-multiple ways. It's _essential_ that you develop your own skills for developing
-algorithms and implementing them through programs. 
+Programming is a creative skill that takes practice and effort to develop.  It's
+_essential_ that you develop your own skills for developing algorithms and
+implementing them through programs. 
 
 Quizzes and exams will be _closed book_. You will be able to bring a 
-single cheat sheet with you. *The goal of assignments and labs is to help you 
-prepare for quizzes and exams!* If you can sit down, focus, and answer sample 
-questions within a time limit, you will ace the exams for this class. 
-Incidentally, you will also be prepared to ace a job interview on this topic! 
+single cheat sheet with you. 
 
-Integrity Guidelines: 
+The goal of assignments and labs is to help you 
+prepare for quizzes and exams. If you can sit down, focus, and answer 
+questions within a time limit, you will ace the exams for this class. 
+*If you are doing worksheets and assignments but not doing well on quizzes, 
+you need to re-think how you are approaching assignments.* After completing an 
+assignment, you should be able to 
+
+* Explain how your code works to someone else, without looking at your code
+* Explain the system calls necessary to complete your assignment without looking them up online
+* Write a similar program within a few minutes, without looking up help online
+
+I can provide advice based on what has helped me learn how to program:
+
+* Most beneficial: writing my own programs from scratch, followed by stepping line by line using a debugger to make sure it worked as intended
+* When stuck, debugging the program with the help of a more experienced developer
+* Comparing my solutions with others _after I finished my own solution_
+
+I do not recommend relying on stack overflow, copying old solutions, and using Chat-GPT. 
+*The absolute worst way to program is by cutting and pasting code you don't understand, guessing your 
+way to something that kind of works.* 
+
+I am not going to police how you study and develop skills. But I will be assessing you on the results 
+of your effort. If you're not doing well, you need to figure out how to work differently. 
+
+Guidelines: 
 
 * DO discuss ideas and approaches with your classmates.
 * DO discuss ideas and approaches with your TAs and instructor.
@@ -29,14 +51,12 @@ Integrity Guidelines:
 * DON'T modify any basecode that comes with your assignment. 
 * DON'T ever share your code with other students.
 
-It's ultimately up to you to learn from your assignments! Remember, no one is
+It's ultimately up to you to learn from your assignments! No one is
 going to hire you to do work that they can easily do themselves using a search
-or AI program generator. The programs in this course are simple enough for an AI
-or search or two to solve. But the next level of programs will not be so simple. You must
-do the work yourself. This is the only way you will develop the skills and
-expertise to reach your full potential. 
+or AI program generator. You can only build expertise with experience and practice.
 
-One final point: we will be using open-source repositories for homeworks in this class. 
-Thus, it will be possible to see what other students (and previous students) have submitted. 
-If you copy from others' repositories, it will be obvious to everyone involved! Only look 
-at other solutions after you have finished your own first!
+One final point: we will be using open-source repositories for homeworks in this
+class.  Thus, it will be possible to see what other students (and previous
+students) have submitted.  If you copy from others' repositories, it will be
+obvious, including potential employers! Only look at other solutions after you
+have finished your own first!
