--- a/quizzes.adoc
+++ b/quizzes.adoc
@@ -1,23 +1,20 @@
 
-=== Labs and exams
+=== Labs, quizzes, exams
 
-In labs, we will have practice quizzes for the final exam, each structured
-like a mini-code jam where you work together in teams. Each quiz will have a
-study guide so you know what types of questions to expect. During lab, you will
-be randomly assigned a partner and given 40 minutes to complete the questions.
-The following week in lab, we will go over answers for the previous week.
+Labs and Quizzes are mandatory. No credit is possible for missed quizzes.  If
+you must miss a quiz, you must make arrangements to take the quiz at another
+time BEFORE the scheduled quiz. If you miss a quiz for medical reasons, you must
+provide a doctor's note.  
 
-If you cannot attend a lab, please let the instructor know in advance. There are
-no make-up opportunities for labs — the missing work will be re-weighted to be
-part of your final exam.
+Labs will consist of hands-on practice in teams, alternating each week between 
+written exercises and timed coding sessions. Coding sessions will be graded and 
+count towards your quiz grade. Worksheets count towards your participation grade. 
 
 There will be one final exam for the semester. Details and dates will be
 released during the semester.  Please read the section on
-link:#_accommodations[accomodations] if you are in need of extra time.  You
+link:#_accommodations[accommodations] if you are in need of extra time.  You
 must inform us of accommodations or conflicts at least 2 weeks in advance of
 the exam.
 
-Quizzes and exams will be open book. You will be given sample questions
-beforehand to help you study. *Warning!* Do not rely heavily on your notes
-for quizzes. You will need to have concepts memorized in order to finish
-within the time limit.
+Quizzes and exams will be closed book. You may bring a single, hand written cheat sheet 
+with you.
