--- a/assts/asst04.adoc
+++ b/assts/asst04.adoc
@@ -8,7 +8,7 @@ include::header.adoc[]
 
 = {title}
 
-// **Due Wednesday, February 15th, before midnight**
+**Due Friday, February 14th, before midnight**
 
 The goals for this assignment are:
 
