--- a/assts/asst05.adoc
+++ b/assts/asst05.adoc
@@ -8,7 +8,7 @@ include::header.adoc[]
 
 = {title}
 
-//**Due Wednesday, Feb 23, before midnight**
+**Due Friday, Feb 21, before midnight**
 
 The goals for this assignment are:
 
