--- a/assts/asst06.adoc
+++ b/assts/asst06.adoc
@@ -8,7 +8,7 @@ include::header.adoc[]
 
 = {title}
 
-// **Due Wednesday, March 1, before midnight**
+**Due Friday, February 28, before midnight**
 
 The goals for this assignment are:
 
