--- a/schedule.adoc
+++ b/schedule.adoc
@@ -6,146 +6,149 @@
 
 //-----------------------------
 | 1
-| September 3, 5 anchor:week01[]
+| January 21, 23 anchor:week01[]
 | *Introductions, Hello C* 
 
 * Topics: Programming at the command line, Makefiles, From Java to C 
 * Read: link:https://diveintosystems.org/singlepage/#_appendix_1_chapter_1_for_java_programmers[Chapter 1: From JAVA to C] 
 * link:http://linuxcommand.org/lc3_learning_the_shell.php[Learning the shell]
-* link:assts/asst01.html[Assignment 01]: Due Sept 6
-* Lab: SSH and Github setup
-// TODO * link:https://github.com/BrynMawr-CS223-F22/git-workshop[Github workshop] and link:https://github.com/BrynMawr-CS223-S22/git-workshop/blob/main/SSHSetup.md[Setting up SSH keys for Github]
+* link:assts/asst01.html[Assignment 01]: Due January 24
+* Lab Jan 21: SSH and Github setup
 
 //-----------------------------
 | 2 
-| Sept 10, 12 anchor:week02[]
+| January 28, 30 anchor:week02[]
 | *More C, Introduction to Pointers* 
 
 * Topics: Function stacks, scope 
 * Read: link:https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
 * link:https://pythontutor.com/c.html#mode=edit[C Tutor]
-* Lab Sept 12: Quiz 01 practice, link:studyguide1.html[Study Guide: Quiz 01]
-* link:assts/asst02.html[Assignment 02]: Sept 13
+* Lab Jan 28: Quiz 01 practice, link:studyguide1.html[Study Guide: Quiz 01]
+* link:assts/asst02.html[Assignment 02]: Due Jan 31
 
 //-----------------------------
 |3
-|Sept 17, 19 anchor:week03[]
+|February 4, 6 anchor:week03[]
 |*Pointers, malloc/free* 
 
 * Topics: Heap, dynamically-allocated memory (malloc, free), More arrays
 * Read: link:https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
-* Lab Sept 19: **Quiz 01** 
-* link:assts/asst03.html[Assignment 03]: Due September 20
+* Lab Feb 4: **Code Jam 01**
+* Class Feb 6: **Quiz 01** 
+* link:assts/asst03.html[Assignment 03]: Due Feb 7
 
 //-----------------------------
 |4
-|Sept 24, 26 anchor:week04[]
+|February 11, 13 anchor:week04[]
 |*Pointer-based data structures. Debugging.* 
 
 * Topics: Linked lists in C. GDB, Valgrind
 * Read: link:https://diveintosystems.org/singlepage/#_c_debugging_tools[Sections 3.1-3.3] 
 * Read: link:http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf[Data Structures in C, Mark Allen Weiss, Chpt 3]
-* Sept 26 Lab: Quiz 02 Practice, link:studyguide2.html[Study Guide: Quiz 02]
-* link:assts/asst04.html[Assignment 04]: Due September 27
+* Lab Feb 11: Quiz 02 Practice, link:studyguide2.html[Study Guide: Quiz 02]
+* link:assts/asst04.html[Assignment 04]: Due Feb 14
 
 //-----------------------------
 |5
-|Oct 1,3 anchor:week05[]
+|February 18, 20 anchor:week05[]
 |*Binary and Data Representation* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.1-4.9] 
-* link:assts/asst05.html[Assignment 05]: Due Oct 4
-* Lab Oct 3:  **Quiz 02**
+* link:assts/asst05.html[Assignment 05]: Due Feb 21
+* Lab Oct 3: **Code Jam 02** 
+* Class Feb 20: **Quiz 02**
 
 //-----------------------------
 |6
-|Oct 8, 10 anchor:week06[]
+|February 25, 27 anchor:week06[]
 |*Assembly* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_what_von_neumann_knew_computer_architecture[Section 5, 5.1] 
 * Read: link:https://diveintosystems.org/singlepage/##_assembly_chapter[Chapter 6] 
 * Read: link:https://diveintosystems.org/singlepage/#_x64_assembly_chapter[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
-* link:assts/asst06.html[Assignment 06]: Due Oct 11
-* Lab Oct 10: Practice Quiz 03, link:studyguide3.html[Study Guide 3]
+* link:assts/asst06.html[Assignment 06]: Due Feb 28
+* Lab Oct 10: Quiz 03 Practice, link:studyguide3.html[Study Guide 3]
 
 //-----------------------------
 |7
-|Oct 16,19 anchor:week08[]
+|March 4,6 anchor:week07[]
+|*The operating system, Processes* 
+
+* Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13, skip section 13.3] 
+* link:assts/asst07.html[Assignment 07]: Due THURSDAY March 6 **Hardcopy due at Park 200B**
+* Lab Oct 24: **Code Jam 03*
+* Class **Quiz 03**
+
+//-----------------------------
+|8
+|Oct 22, 24 anchor:week08[]
 |*Fall Break*
 
 * *NO LECTURES, LABS, HOMEWORKS*
 
 //-----------------------------
-|8
-|Oct 22, 24 anchor:week07[]
-|*The operating system, Processes* 
-
-* Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13, skip section 13.3] 
-* link:assts/asst07.html[Assignment 07]: Due Oct 25 **Hardcopy due at Park 200B**
-* Lab Oct 24: **Quiz 03**
-
-//-----------------------------
 |9
-|Oct 29,31 anchor:week09[]
+|March 18, 20 anchor:week09[]
 |*Threads I* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/asst08.html[Assignment 08]: Due Nov 1 
-* Lab: Practice Quiz 04 link:studyguide4.html[Study Guide: Quiz 04]
+* link:assts/asst08.html[Assignment 08]: Due March 21 
+* Lab March 18: Practice Quiz 04 link:studyguide4.html[Study Guide: Quiz 04]
 
 //-----------------------------
 |10
-|Nov 5, 7 anchor:week10[]
+|March 25, 27 anchor:week10[]
 |*Threads II* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* Nov 5: NO CLASS. ELECTION Day
-* link:assts/asst09.html[Assignment 09]: Due Nov 8
-* Lab: **Quiz 04**
-
-//-----------------------------
-|11
-|Nov 12, 14 anchor:week11[]
-|*Threads III* 
-
-* link:assts/asst10.html[Assignment 10]: Due Nov 14th
-* Lab: Quiz Practice, link:studyguide5.html[Study Guide 5]
+* link:assts/asst09.html[Assignment 09]: Due March 28
+* Lab March 25: **Code Jam 04**
+* Class March 27: **Quiz 04**
 
 //-----------------------------
 |12
-|Nov 19,21 anchor:week12[]
-|*Threads IV* 
+|April 1, 3 anchor:week11[]
+|*Threads III* 
 
-* Nov 21, NO CLASS!!
-* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/asst11.html[Assignment 11]: Due Dec 1 (No extensions)
-* Lab: **Quiz 05**
+* link:assts/asst10.html[Assignment 10]: Due April 4th
+* Lab April 1: Quiz 05 Practice, link:studyguide5.html[Study Guide 5]
 
 //-----------------------------
 |13
-|Nov 26 anchor:week13[]
+|April 8, 10 anchor:week12[]
+|*Threads IV* 
+
+* Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
+* Class April 10: **Quiz 05**
+* Lab April 8: **Code Jam 05**
+
+//-----------------------------
+|13
+|April 15, 17 anchor:week13[]
 |*Malloc* 
 
 * Read:"My malloc: mylloc and mhysa" by Johan Montelius 
-* Nov 28: Thanksgiving, NO CLASS
+* link:assts/asst11.html[Assignment 11]: Due April 18
+* Lab April 15: Quiz 06 Practice
 
 //-----------------------------
 |14
-|Dec 3,5 anchor:week14[]
+|April 22, 24 anchor:week14[]
 |*Memory* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy[Chapter 11.1-11.3] 
-* link:assts/asst12.html[Assignment 12]: Due Dec 6
-* Lab Dec 5, A12 Readmes (Due Dec 5)
+* Lab April 22: **Code Jam06** 
+* Class April 24: **Quiz 04**
+* link:assts/asst12.html[Assignment 12]: Due April 25
 
 //-----------------------------
 |15
-|Dec 10,12 anchor:week15[]
+|April 29, May 1 anchor:week15[]
 |*Code Optimization, C++* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_code_optimization[Chapter 12] 
-* Lab Dec 12, link:studyguide-final[Final Study Guide], link:studyguide6.html[Study Guide 6]
+* Lab April 29, link:studyguide-final[Final Study Guide], link:studyguide6.html[Study Guide 6]
 
 |===
 
