--- a/studyguide1.adoc
+++ b/studyguide1.adoc
@@ -8,7 +8,7 @@ include::header.adoc[]
 
 = {title}
 
-Quizzes will be closed book. 30 minutes in lab.
+Quizzes will be closed book. You can bring one written cheat sheet. 30 minutes in class.
 
 Topics:
 
