--- a/studyguide4.adoc
+++ b/studyguide4.adoc
@@ -8,7 +8,7 @@ include::header.adoc[]
 [discrete]
 = {title}
 
-Code Jams are open book. 40 minutes in lab.
+Quizzes are closed book. You can bring one written cheat sheet. 30 minutes in class.
 
 Topics:
 
