--- a/studyguide6.adoc
+++ b/studyguide6.adoc
@@ -7,7 +7,7 @@ include::header.adoc[]
 
 = {title}
 
-Exams are closed book. One written cheat sheet.
+Quizzes are closed book. You can bring one written cheat sheet. 30 minutes in class.
 
 Topics:
 
