--- a/assts/header.adoc
+++ b/assts/header.adoc
@@ -8,3 +8,5 @@
 :leveloffset: +1
 :toc: left
 :csweb: https://www.cs.brynmawr.edu/~alinen
+:repo: https://github.com/BrynMawr-CS223-S25
+:semester: s25
