--- a/schedule.adoc
+++ b/schedule.adoc
@@ -24,7 +24,7 @@
 * Read: link:https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
 * link:https://pythontutor.com/c.html#mode=edit[C Tutor]
 * Lab Jan 28: Quiz 01 practice, link:studyguide1.html[Study Guide: Quiz 01]
-* link:assts/asst02.html[Assignment 02]: Due Jan 31
+* link:assts/asst02.[Assignment 02]: Due Jan 31
 
 //-----------------------------
 |3
@@ -35,7 +35,7 @@
 * Read: link:https://diveintosystems.org/singlepage/#_a_deeper_dive_into_c_programming[Sections 2.1-2.8, 2.9 (Command line arguments only)] 
 * Lab Feb 4: **Code Jam 01**
 * Class Feb 6: **Quiz 01** 
-* link:assts/asst03.html[Assignment 03]: Due Feb 7
+* link:assts/asst03.[Assignment 03]: Due Feb 7
 
 //-----------------------------
 |4
@@ -46,7 +46,7 @@
 * Read: link:https://diveintosystems.org/singlepage/#_c_debugging_tools[Sections 3.1-3.3] 
 * Read: link:http://svslibrary.pbworks.com/f/Data+Structures+and+Algorithm+Analysis+in+C+-+Mark+Allen+Weiss.pdf[Data Structures in C, Mark Allen Weiss, Chpt 3]
 * Lab Feb 11: Quiz 02 Practice, link:studyguide2.html[Study Guide: Quiz 02]
-* link:assts/asst04.html[Assignment 04]: Due Feb 14
+* link:assts/asst04.[Assignment 04]: Due Feb 14
 
 //-----------------------------
 |5
@@ -54,8 +54,8 @@
 |*Binary and Data Representation* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_binary_and_data_representation[Chapter 4.1-4.9] 
-* link:assts/asst05.html[Assignment 05]: Due Feb 21
-* Lab Oct 3: **Code Jam 02** 
+* link:assts/asst05.[Assignment 05]: Due Feb 21
+* Lab Feb 18: **Code Jam 02** 
 * Class Feb 20: **Quiz 02**
 
 //-----------------------------
@@ -66,8 +66,8 @@
 * Read: link:https://diveintosystems.org/singlepage/#_what_von_neumann_knew_computer_architecture[Section 5, 5.1] 
 * Read: link:https://diveintosystems.org/singlepage/##_assembly_chapter[Chapter 6] 
 * Read: link:https://diveintosystems.org/singlepage/#_x64_assembly_chapter[Chapter 7 (7.1-7.3,7.5,7.10), 10] 
-* link:assts/asst06.html[Assignment 06]: Due Feb 28
-* Lab Oct 10: Quiz 03 Practice, link:studyguide3.html[Study Guide 3]
+* link:assts/asst06.[Assignment 06]: Due Feb 28
+* Lab Feb 25: Quiz 03 Practice, link:studyguide3.html[Study Guide 3]
 
 //-----------------------------
 |7
@@ -76,13 +76,13 @@
 
 * Read: link:https://diveintosystems.org/singlepage/#_the_operating_system[Chapter 13, skip section 13.3] 
 * link:assts/asst07.html[Assignment 07]: Due THURSDAY March 6 **Hardcopy due at Park 200B**
-* Lab Oct 24: **Code Jam 03*
+* Lab March 4: **Code Jam 03*
 * Class **Quiz 03**
 
 //-----------------------------
 |8
-|Oct 22, 24 anchor:week08[]
-|*Fall Break*
+|March 11, 13 anchor:week08[]
+|*Spring Break*
 
 * *NO LECTURES, LABS, HOMEWORKS*
 
@@ -93,7 +93,7 @@
 
 * Read: link:https://diveintosystems.org/singlepage/#_some_advanced_c_features[Section 2.9.3, 2.9.4 (void* andpointer arithmetic)] 
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/asst08.html[Assignment 08]: Due March 21 
+* link:assts/asst08.[Assignment 08]: Due March 21 
 * Lab March 18: Practice Quiz 04 link:studyguide4.html[Study Guide: Quiz 04]
 
 //-----------------------------
@@ -102,20 +102,20 @@
 |*Threads II* 
 
 * Read: link:https://diveintosystems.org/singlepage/#_leveraging_shared_memory_in_the_multicore_era[Chapter 14] 
-* link:assts/asst09.html[Assignment 09]: Due March 28
+* link:assts/asst09.[Assignment 09]: Due March 28
 * Lab March 25: **Code Jam 04**
 * Class March 27: **Quiz 04**
 
 //-----------------------------
-|12
+|11
 |April 1, 3 anchor:week11[]
 |*Threads III* 
 
-* link:assts/asst10.html[Assignment 10]: Due April 4th
+* link:assts/asst10.[Assignment 10]: Due April 4th
 * Lab April 1: Quiz 05 Practice, link:studyguide5.html[Study Guide 5]
 
 //-----------------------------
-|13
+|12
 |April 8, 10 anchor:week12[]
 |*Threads IV* 
 
@@ -129,7 +129,7 @@
 |*Malloc* 
 
 * Read:"My malloc: mylloc and mhysa" by Johan Montelius 
-* link:assts/asst11.html[Assignment 11]: Due April 18
+* link:assts/asst11.[Assignment 11]: Due April 18
 * Lab April 15: Quiz 06 Practice
 
 //-----------------------------
@@ -140,7 +140,7 @@
 * Read: link:https://diveintosystems.org/singlepage/#_storage_and_the_memory_hierarchy[Chapter 11.1-11.3] 
 * Lab April 22: **Code Jam06** 
 * Class April 24: **Quiz 04**
-* link:assts/asst12.html[Assignment 12]: Due April 25
+* link:assts/asst12.[Assignment 12]: Due April 25
 
 //-----------------------------
 |15
